# galactory

./: pyproject.toml
